Changelog
=========

12.9.dev0 - (unreleased)
------------------------
* Change: Update tests to work with latest EEAContentTypes
  [avoinea refs #89955]

12.8 - (2017-11-14)
-------------------
* Bug fix: Fixed deprecated 'dataSource' field blocking EEAFigure edit.
  [avoinea refs #89850]

12.7 - (2017-08-16)
-------------------
* Bug fix: W3C compliance modifications
  [valipod refs #86295]

12.6 - (2017-06-26)
-------------------
* Bug fix: fixed failing tests due to depiction changes
  [zoltan_andras refs #81209]

12.5 - (2017-06-06)
-------------------
* Change: take into consideration the fact that WidgetFilterBrains might
  receive a datetime with timezone information attached in which case we
  need to get rid of it when comparing to a datetime without a timezone
  [ichim-david refs #85555]

12.4 - (2017-05-22)
-------------------
* Change: Add dedicated async quota for Data Service jobs
  [avoinea refs #84915]
* Change: Remove hard-dependency on plone.app.async
  [avoinea refs #84915]
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

12.3 - (2017-05-15)
-------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

12.2 - (2017-04-24)
-------------------
* Change: updated package information
  [eduard-fironda]

12.1 - (2017-03-20)
-------------------
* Change: Latest version widget returns the MOST recent version
  of the object that MATCH the search criteria.
  [avoinea refs #83219]
* Bug fix: Fix faceted performance regression introduced
  by latest version widget in ticket #75032
  [avoinea refs #83219]

12.0 - (2017-02-21)
-------------------
* Feature: Remove `Tags` section within PDF export
  [avoinea refs #81054]

11.9 - (2017-02-14)
-------------------
* Cleanup: Remove `getProcessor` metadata from portal_catalog
  [voineali refs #80119]
* Feature: geotags, temporal coverage and themes display
  alligned with tags style
  [alecghica refs #81054]

11.8 - (2017-01-30)
-------------------