@@ -3,6 +3,8 @@ Changelog
 
 12.9.dev0 - (unreleased)
 ------------------------
+* Change: Update to work with eea.facetednavigation 10.0+
+  [avoinea refs #89955]
 * Change: Update tests to work with latest EEAContentTypes
   [avoinea refs #89955]
 
